@@ -1,3 +1,9 @@
+2012-09-01  Moritz Bunkus  <moritz@bunkus.org>
+
+	* mmg: new feature: chapter editor: Added support for the edition
+	flags "hidden", "default" and "ordered". First part of the
+	implementation for ticket #736.
+
 2012-08-30  Moritz Bunkus  <moritz@bunkus.org>
 
 	* documentation: Added a Basque translation of mmg's guide by
